apps/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: detail-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - name: detail-route
      match:
        - uri:
            prefix: /catalogDetail
      route:
        - destination:
            host: detail
            port:
              number: 3000
